styles/style.css
/* typography */
.noto-serif-font{
  font-family: "Noto Serif", serif;
  font-optical-sizing: auto;
  font-style: normal;
  font-variation-settings:
    "wdth" 100;
}
.inter-font{
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

body{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    background-color: #f5f8ff;
}

/* nav section styles */
nav{
    max-width: 1140px;
    height: 71px;
    margin: 1.8rem auto;
    display: flex;
    justify-content: space-between;
    /* align-items: center; */
    padding: 1.8rem auto;
    /* border: 2px solid red; */
}
nav ul li{
    list-style: none;
}
nav ul li a{
    text-decoration: none;
    color: black;
}
#cart-icon{
    gap: 0.6rem;
}
.nav-ul{
    display: flex;
    gap:3rem;
    padding: 1.1rem;
    align-items: center;
}

/* Banner section styles */
.banner-container{
    display: flex;
    align-items: center;
    max-width: 1140px;
    height: 470px;
    margin: 7.5rem auto;
    /* border: 2px solid peru; */
}
.banner-title-text{
    font-size:4rem ;
    font-weight: 700;
}
#fresh-flower{
    color: #E95A08;
}
.banner-sub-title{
    font-size: 1.3rem;
}
.banner-img{
    width: 570px;
    height: 355px;
}

/* MAIN */

/* Our Plant section style */
.our-plants-title{
    max-width: 1140px;
    height: auto;
    /* border: 2px solid blue; */
    margin: 0.5rem auto;
}
.our-plants-tittle-text{
    text-align: center;
    font-size:3rem;
    font-weight: 700;
}
#plants-our{
    color:  #E95A08;
}
.our-plants-subtitle{
    font-size: 1.3rem;
}

/* Flower Card section styles */

.card-container{
    max-width: 1140px;
    margin:3.1rem auto;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    row-gap: 1.8rem;
    column-gap:1.2rem ;
}
.card-subcontainer{
    /* border: 1px solid brown; */
    max-width: 270px;
    height: 485px;
}
.card-image{
    width: 100%;
    height: 320px;
}
.card-title{
    font-size:1.3rem ;
    font-weight: 500;
    text-align: center;
}
.card-price{
    font-size: 1.3rem;
    font-weight: 700;
    text-align: center;
}
.card-btn{
    width:270px ;
    height:50px ;
    background:#E95A08 ;
    color:#FFFFFF ;
    border: none;
}

/* flower lover section style */

.flower-lover-container-main{
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: 1140px;
    height: 600px;
    /* border: 2px solid blue; */
    margin: 13rem auto;
    gap:3.75rem ;
}
.flower-image-content{
    position: relative;
}
.flower-badge{
    position: absolute;
    top:-125px ;
    right: -90px ;
    width: 280px;
    height: 280px;  
}
.flower-store-image{
    max-width: 540px;
    height: 595px;
    background-image: linear-gradient(rgba(103, 171, 234, 0.4));
}
.flower-lover-title-container{
    display: flex;
    flex-direction:column;
    max-width: 540px;
    height: 520px;
}
.flower-lover-title{
    font-size: 3.1rem;
    font-weight: 700;
    margin: 0;
}
.flower-article-text{
    margin: 1.25rem;
    font-size: 1.37rem;
    color: rgba(0, 0, 0, 0.5);
}

/* Latest Deal Section styes */

.latest-deal-title-main{
    /* border: 2px solid greenyellow; */
    margin: 7rem auto;
    text-align: center;
}
.latest-deal-title-text{
    font-size:3.1rem ;
    font-weight: 700;
}
#latest{
    color: #E95A08;
}
.latest-deal-article{
    font-size: 1.35rem;
}

/* grid card styles */

.plant-price-offer-main{
    max-width: 1140px;
    display: grid;
    grid-template-columns:1fr 2fr;
    grid-template-rows: auto auto;
    gap: 20px;
    margin:0 auto;
    margin-top: 40px;
    /* border:2px solid red;  */
}
.latest-image-container{
    position: relative;
}
.latest-image{
    border-radius: 1rem;
    filter: brightness(0.6);
}
.off-container{
    position: absolute;
    top:60px;
    left:75px;
    text-align: center;
}
.offer-price, .offer-btn{
    color: #FFFFFF;
    font-size:1.25rem ;
    font-weight:700 ;
}
.offer-price-last{
    position:relative;
    left:200px;
    top: 100px;
}
.offer-btn-last{
    position: relative;
    left: 200px;
    top:100px;
}

.plant-price-offer-main .latest-image-container:nth-child(1) {
    grid-column: 1 / 2; 
    grid-row: 1 / 2;    
}
.plant-price-offer-main .latest-image-container:nth-child(2) {
    grid-column: 1 / 2;
    grid-row: 2 / 3;    
}
.plant-price-offer-main .latest-image-container:nth-child(3) {
    grid-column: 2 / 3;
    grid-row: 1 / 3;   
}

/* Join section styles */
.colorful-bunch-section{
    background-image: url(../assets/news-letter-bg.png);
    background-size: cover;
    background-position: center;
    height: 535px;
}
.join-section-main{
    max-width: 1400px;
    height: 540px;
    margin:0 auto;
    margin-top: 7rem;
    position: relative;
}
.form-section{
    /* border: 2px solid rgb(7, 247, 59);  */
    text-align: center;
    margin-top:200px;
    margin-left:305px;
    position: absolute;
}
.color-title{
    font-size: 3.1rem;
    font-weight: 700;
    color:white;
    /* border: 2px solid red;  */
    text-align: center;
    display: inline-block;
    margin-left: 50px;
}
.email-input{
    width: 645px;
    height:55px;
    position: relative;
    padding:0 10px;
    /* margin-bottom: 150px; */
}
.subscribe-btn{
    background-color:#E95A08;
    width: 185px;
    height: 57px;
    border: none;
    position: absolute;
    cursor: pointer;
}


/* footer section styles */

.footer-container{
    max-width: 1140px;
    height: 300px;
    margin: 0 auto;
    margin-top: 3.1rem;
}
.footer-subcontainer{
    display: flex;
    justify-content: space-between;
}
.footer-logo{
    max-width: 135px;
    height: 85px;
}
.footer-text{
    max-width: 360px;
    font-size: 1.37rem;
    color: rgba(0, 0, 0, 0.5);
}
.list-container{
    list-style: none;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    column-gap: 2.5rem;
}
.footer-a{
    text-decoration: none;
    color: rgba(107, 114, 128, 1);
}
.footer-social{
    display: flex;
    justify-content: center;
    gap:1.5rem;
}










/* responsive for mobile device */

@media screen and (max-width:576px) {
    
    /* navbar responsive */
    .nav-li{
        display: none;
    }

    nav{
    max-width: 360px;
    /* height: 38px; */
    margin: 1rem auto;
    display: flex;
    justify-content: space-between;
    /* padding: 1.8rem auto; */
    }

    /* Banner section responsive */

    .banner-container{
    flex-direction: column-reverse;
    max-width:360px;
    height: auto;
    margin-top: 1.7rem;
    margin-bottom: 1rem;
    }

    .banner-title{
    max-width: 360px;
    height: 147px;
    gap: 0.8rem;
    }
    .banner-title-text{
    font-size:1.5rem ;
    font-weight: 700;
    }
    .banner-sub-title{
    font-size: 0.8rem;
    }
    .banner-img{
    /* max-width:360px; */
    max-width:350px;
    height: 245px;
    }

    /* our plants section responsive */

    .our-plants-title{
    max-width: 360px;
    height: auto;
    margin: 0.5rem auto;
    }

    /* Flower Card section responsive */
    .card-container{
    max-width: 360px;
    margin:0 auto;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    row-gap: 1.7rem;
    column-gap:1.2rem ;
    }

    .card-subcontainer{
    max-width: 168px;
    height: 335px;
    }

    .card-image{
    max-width: 166px;
    height: 190px;
}
.card-title{
    font-size:1rem ;
    font-weight: 500;
    text-align: center;
}
.card-price{
    font-size: 1rem;
    font-weight: 700;
    text-align: center;
}
.card-btn{
    width:168px ;
    height:50px ;
    background:#E95A08 ;
    color:#FFFFFF ;
}

/* flower lover section responsive */

.flower-badge{
    display: none;
}
.flower-lover-container-main{
    flex-direction: column;
    max-width: 360px;
    height: 680px;
    margin: 2.5rem auto;
    gap: 1rem;
    justify-content: left;
}
.flower-store-img{
    max-width: 358px;
    height: 395px;
    margin: 0;
}
.flower-lover-title-container{
    display: flex;
    flex-direction:column;
    max-width: 358px;
    height: 235px;
}
.flower-lover-article{
    padding-left: 0px;
    margin: 0 auto;
}
.flower-lover-title{
    margin: 0;
    font-size: 1.5rem;
    font-weight: 700;
    margin: 0;
}
.flower-article-text{
    margin: 1rem;
    font-size: 0.8rem;
    color: rgba(0, 0, 0, 0.5);
}


/* Latest Deal Section responsive */

.latest-deal-title-main{
    max-width: 360px;
}

.plant-price-offer-main{
    grid-template-columns:1fr;
    grid-template-rows: auto;
    gap:0.8rem;
    max-width:360px;
    margin: 0 auto;
}

.latest-deal-title{
    /* width:90%; */
    max-width: 360px;
}

.latest-image{
    /* width:100%;  */
    max-width: 358px;
}

  .plant-price-offer-main .latest-image-container:nth-child(1),
  .plant-price-offer-main .latest-image-container:nth-child(2),
  .plant-price-offer-main .latest-image-container:nth-child(3) {
    grid-column: auto; 
    grid-row: auto; 
   
  }

.offer-price {
    font-size: 1.4rem;
  }
  .offer-btn {
    font-size: 1rem;
  }
.plant-price-offer-main .latest-image-container {
     grid-column: auto; 
     grid-row: auto;    
     height: 250px;     
  }
  .last-cnt{
    position: relative;
  }
.offer-price-last{
    position:relative;
    left:-50px;
    top: -200px;
}
.offer-btn-last{
    left:-50px;
    top: -200px;
}


/* join section responsive */

.join-section-main{
   max-width:360px;
   height: 270px; 
   background-size: cover;
   margin-top: 50px;
}

.colorful-bunch-section{
    width:100%;
    height: 100%;
    background-size: cover;
    background-position: center;
}

.color-title{
    font-size: 1.25rem;
    margin-right: 9.3rem;
}

.form-section{
    position: absolute;
    margin-top:50px;
    margin-left: 50px;
}

.email-input{
    max-width:218px;
    height: 50px;
    margin-right:90px;
}

.subscribe-btn{
    max-width: 103px;
    margin-right:50px;
    position: absolute;
    right:1px;
}

/* footer section responsive */

.footer-container{
    max-width:360px;
    height:760px ;
}
.footer-subcontainer{
    flex-direction: column;
}
.footer-title-section{
    gap: 1fr;
}
.footer-logo{
    width: 180px;
}
.footer-text{
    max-width:358px;
}

.list-container{
    grid-template-columns: 1fr;
    margin-top: 0rem;
    height: 496px;
    margin-bottom: 0px;
    /* justify-content: left; */
}

}

